updated 20th week code challenge

--- a/20th week teamwork challange_find max number of given 5 without using max().ipynb
+++ b/20th week teamwork challange_find max number of given 5 without using max().ipynb
@@ -14,23 +14,19 @@
     }
    ],
    "source": [
+    "# CT decomposition: Break down the problem into 1) get input 5 times to a list 2) sort numbers 3) get last and largest one\n",
+    "# CT algorithm design: This py code itself\n",
+    "# CT abstraction: Assume user enter numbers everytime, its not important the size of the number entered\n",
     "\n",
     "numbers=[]\n",
     "count=1\n",
     "while count < 6:\n",
-    "    numbers.append(int(input(f\"Please enter a number {count}: \")))\n",
+    "    numbers.append(int(input(f\"Please enter number {count}: \")))\n",
     "    count+=1\n",
     "new_numbers= sorted(numbers)\n",
     "max_number=new_numbers[-1]\n",
     "print(f\"Maximum number you entered is : {max_number}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
